@@ -1,15 +1,29 @@
+local data_util = require("__flib__.data-util")
+
 data:extend({
   { type = "custom-input", name = "tlst-toggle-gui", key_sequence = "CONTROL + T", action = "lua" },
+  { type = "custom-input", name = "tlst-new-task", key_sequence = "", action = "lua" },
   { type = "custom-input", name = "tlst-linked-confirm-gui", key_sequence = "", linked_game_control = "confirm-gui" },
   {
     type = "shortcut",
     name = "tlst-toggle-gui",
-    icon = { filename = "__TaskList__/graphics/shortcut-dark-x32.png", size = 32, mipmap_count = 2 },
-    small_icon = { filename = "__TaskList__/graphics/shortcut-dark-x24.png", size = 24, mipmap_count = 2 },
-    disabled_icon = { filename = "__TaskList__/graphics/shortcut-light-x32.png", size = 32, mipmap_count = 2 },
-    disabled_small_icon = { filename = "__TaskList__/graphics/shortcut-light-x24.png", size = 24, mipmap_count = 2 },
+    icon = { filename = "__TaskList__/graphics/tasks-dark-x32.png", size = 32, mipmap_count = 2 },
+    small_icon = { filename = "__TaskList__/graphics/tasks-dark-x24.png", size = 24, mipmap_count = 2 },
+    disabled_icon = { filename = "__TaskList__/graphics/tasks-light-x32.png", size = 32, mipmap_count = 2 },
+    disabled_small_icon = { filename = "__TaskList__/graphics/tasks-light-x24.png", size = 24, mipmap_count = 2 },
     toggleable = true,
     associated_control_input = "tlst-toggle-gui",
+    action = "lua",
+  },
+  {
+    type = "shortcut",
+    name = "tlst-new-task",
+    icon = { filename = "__TaskList__/graphics/new-task-dark-x32.png", size = 32, mipmap_count = 2 },
+    small_icon = { filename = "__TaskList__/graphics/new-task-dark-x24.png", size = 24, mipmap_count = 2 },
+    disabled_icon = { filename = "__TaskList__/graphics/new-task-light-x32.png", size = 32, mipmap_count = 2 },
+    disabled_small_icon = { filename = "__TaskList__/graphics/new-task-light-x24.png", size = 24, mipmap_count = 2 },
+    toggleable = true,
+    associated_control_input = "tlst-new-task",
     action = "lua",
   },
   {
