@@ -1,4 +1,5 @@
 [controls]
+tlst-new-task=New task
 tlst-toggle-gui=View tasks
 
 [gui]
@@ -36,4 +37,5 @@ TaskList=Keep track of your tasks in a simple and unobtrusive interface.
 TaskList=Task List
 
 [shortcut-name]
+tlst-new-task=New task
 tlst-toggle-gui=Tasks
